frontend/tests/cases/negative/security/nonInterfSec.gr
fooa : Int [Lo] → Int [Hi]
fooa [_] = [42]

bad : Int [Private] → Int [Public]
bad [x] = [x]

extract : Int [Private] -> Int
extract [x] = x
